resolved card layout issue

--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -3,33 +3,36 @@
   font-family: "Cabinet Grotesk";
   font-size: 20px;
   font-weight: 500;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-self: center;
+  color: black;
 }
 .clothes__border {
   margin-top: 50px;
+  display: flex;
+  gap: 30px;
 }
-/* .clothes__title {
-  font-family: "Cabinet Grotesk";
-  font-size: 20px;
-  font-weight: 500;
-} */
 
 .clothes__button {
   border: none;
   height: 25px;
-  width: 88px;
-  /* font-family: "Cabinet Grotesk";
-  font-size: 20px;
-  font-weight: 500; */
+  background-color: white;
 }
-
+.clothes__button:hover {
+  color: grey;
+  cursor: pointer;
+}
+.clothes__title {
+  margin: 0;
+  padding-left: 100px;
+}
 .clothes__items {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
-  max-width: 1015px;
-  /* font-family: "Cabinet Grotesk";
-  font-size: 20px;
-  font-weight: 500; */
   color: black;
 }
